index updated with all songs july 2022-present

--- a/songs/index.html
+++ b/songs/index.html
@@ -134,45 +134,110 @@ img {
 	<br>
 	<br>
 
-<p class="title">
-<a href="Improv 2021.11.20.mp3" target="_blank">
-"Improv Nov 20, 2021.mp3"
-</a>
-</p>
 
-
+<p class="title" title="December 1, 2024"><a href="improv 2024.12.01 reunidos 2.mp3" target="_blank">"Reunidos.mp3"</a></p>
+<p class="title" title="August 15, 2024"><a href="Improv 2024.08.15 renfe.mp3" target="_blank">Renfe.mp3"</a></p>
+<p class="title"><a href="Improv 2024.08.15 noise.mp3" target="_blank">"Noise August 15, 2024.mp3"</a></p>
+<p class="title"><a href="Improv 2024.08.13.mp3" target="_blank">"Improv August 13, 2024.mp3"</a></p>
+<p class="title"><a href="Improv 2024.07.09.mp3" target="_blank">"Improv July 9, 2024.mp3"</a></p>
+<p class="title"><a href="Improv 2024.07.06 texture.mp3" target="_blank">"Texture July 6, 2024.mp3"</a></p>
+<p class="title"><a href="Improv 2024.07.06 e.mp3" target="_blank">"Blues in E July 6, 2024.mp3"</a></p>
+<p class="title"><a href="Improv 2024.07.04.mp3" target="_blank">"Improv July 4, 2024.mp3"</a></p>
+<p class="title" title="July 2, 2024"><a href="improv 2022.07.02 for the birds.mp3" target="_blank">"For the Birds!.mp3"</a></p>
+<p class="title"><a href="Improv 2024.07.03.mp3" target="_blank">"Improv July 3, 2024.mp3"</a></p>
+<p class="title"><a href="Improv 2024.07.02 thinking of.mp3" target="_blank">"Thinking of July 2, 2024.mp3"</a></p>
+<p class="title"><a href="Improv 2024.07.01.mp3" target="_blank">"Improv July 1, 2024.mp3"</a></p>
+<p class="title" title="June 28, 2024"><a href="Improv 2024.06.28 how to win.mp3" target="_blank">"How to Win.mp3"</a></p>
+<p class="title"><a href="Improv 2024.03.09.mp3" target="_blank">"Improv March 9, 2024.mp3"</a></p>
+<p class="title" title="February 24, 2024"><a href="Improv 2024.02.24 lovely.mp3" target="_blank">"Variation on a Lovely Theme #7.mp3"</a></p>
+<p class="title"><a href="Improv 2023.12.16.mp3" target="_blank">"Improv December 16, 2023.mp3"</a></p>
+<p class="title" title="December 15, 2023"><a href="Improv 2023.12.15 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #13.mp3"</a></p>
+<p class="title"><a href="Improv 2023.12.15 e.mp3" target="_blank">"Improv December 15, 2023.mp3"</a></p>
+<p class="title"><a href="Improv 2023.11.24.mp3" target="_blank">"Improv November 24, 2023.mp3"</a></p>
+<p class="title"><a href="Improv 2023.11.24 2.mp3" target="_blank">"Improv November 24, 2023 #2.mp3"</a></p>
+<p class="title"><a href="life on mars 2023.11.18.mp3" target="_blank">"Life on 💃 November 18, 2023"</a></p>
+<p class="title" title="August 30, 2023"><a href="Improv 2023.08.30 lovely.mp3" target="_blank">"Variation on a Lovely Theme #6.mp3"</a></p>
+<p class="title" title="August 30, 2023"><a href="Improv 2023.08.30 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #12.mp3"</a></p>
+<p class="title"><a href="Improv 2023.08.07.mp3" target="_blank">"Improv August 7, 2023.mp3"</a></p>
+<p class="title"><a href="Improv 2023.07.18.mp3" target="_blank">"Improv July 18, 2023.mp3"</a></p>
+<p class="title" title="July 18, 2023"><a href="Improv 2023.07.18 tswift.mp3" target="_blank">"Variation on a Theme by TSwift #4.mp3"</a></p>
+<p class="title"><a href="Improv 2023.07.17.mp3" target="_blank">"Improv July 17, 2023.mp3"</a></p>
+<p class="title" title="July 13, 2023"><a href="Improv 2023.07.13 where ya been.mp3" target="_blank">"Where ya been?!.mp3"</a></p>
+<p class="title"><a href="Improv 2023.07.11.mp3" target="_blank">"Improv July 11, 2024.mp3"</a></p>
+<p class="title" title="July 7, 2023"><a href="Improv 2023.07.07 Last name.mp3" target="_blank">"[LAST NAME].mp3"</a></p>
+<p class="title"><a href="improv 2023.07.05 thinking of.mp3" target="_blank">"Thinking of July 5, 2023.mp3"</a></p>
+<p class="title"><a href="improv 2023.07.03 transmission.mp3" target="_blank">"Transmission July 3, 2023.mp3"</a></p>
+<p class="title"><a href="Improv 2023.07.03 e.mp3" target="_blank">"Blues in E July 3, 2023.mp3"</a></p>
+<p class="title" title="June 28, 2023"><a href="improv 2023.06.28 next time on.mp3" target="_blank">"Next time on.mp3"</a></p>
+<p class="title"><a href="Improv 2023.06.14.mp3" target="_blank">"Improv June 14, 2023.mp3"</a></p>
+<p class="title"><a href="Improv 2023.06.12 grapevine.mp3" target="_blank">"Grapevine June 12, 2023.mp3"</a></p>
+<p class="title" title="June 9, 2023"><a href="Improv 2023.06.09 Keep it up.mp3" target="_blank">"Keep it up!.mp3"</a></p>
+<p class="title"><a href="improv 2023.06.09 grace.mp3" target="_blank">"Grace June 9, 2023.mp3"</a></p>
+<p class="title"><a href="Improv 2023.06.09 e.mp3" target="_blank">"Blues in E June 9, 2023.mp3"</a></p>
+<p class="title"><a href="Improv 2023.05.25.mp3" target="_blank">"Improv May 25, 2023.mp3"</a></p>
+<p class="title"><a href="Improv 2023.05.24.mp3" target="_blank">"Improv May 24, 2023.mp3"</a></p>
+<p class="title" title="May 23, 2023"><a href="improv 2023.05.23 timezone.mp3" target="_blank">"Timezone.mp3"</a></p>
+<p class="title" title="May 19, 2023"><a href="Improv 2023.05.19 bliss.mp3" target="_blank">"Variation on a Blissful Theme.mp3"</a> (<a href="https://youtu.be/YL97fi1Mhik?si=59hmVr9qLStR_qKx&t=57" target="_blank">🪐</a>)</p>
+<p class="title" title="May 15, 2023"><a href="Improv 2023.05.15 lovely  .mp3" target="_blank">"Variation on a Lovely Theme #5.mp3"</a></p>
+<p class="title" title="April 12, 2023"><a href="improv 2023.04.12 maybe just maybe.mp3" target="_blank">"Maybe Just Maybe.mp3"</a></p>
+<p class="title" title="March 15, 2023"><a href="Improv 2023.03.15 rehearsal.mp3" target="_blank">"Dress Rehearsal.mp3"</a></p>
+<p class="title" title="March 10, 2023"><a href="Improv 2023.03.10 first impressions.mp3" target="_blank">"First Impressions.mp3"</a></p>
+<p class="title" title="March 10, 2023"><a href="Improv 2023.03.10 second chances.mp3
+" target="_blank">"Second Chances.mp3"</a></p>
+<p class="title"><a href="Improv 2023.03.01.mp3" target="_blank">"Improv March 1 2023.mp3"</a></p>
+<p class="title" title="February 24, 2023"><a href="Improv 2023.02.24 sketch of Chamberí .mp3" target="_blank">"Sketch of Chamberí.mp3"</a></p>
+<p class="title"><a href="Improv 2023.02.24 .mp3" target="_blank">"Improv February 24, 2023.mp3"</a></p>
+<p class="title" title="February 10, 2023"><a href="Improv 2023.02.10 go west.mp3" target="_blank">"Go West 🏇.mp3"</a></p>
+<p class="title" title="February 10, 2023"><a href="Improv 2023.02.10 young man.mp3" target="_blank">"🏇Young Man.mp3"</a></p>
+<p class="title" title="January 31, 2023"><a href="Improv 2023.01.31 transmission.mp3" target="_blank">"Transmission.mp3"</a></p>
+<p class="title"><a href="Improv 2023.01.31 E.mp3" target="_blank">"Blues in E January 31, 2023.mp3"</a></p>
+<p class="title"><a href="improv 2023.01.15.mp3" target="_blank">"Improv January 15, 2023.mp3"</a></p>
+<p class="title" title="January 15, 2023"><a href="improv 2023.01.15 tom 5 years.mp3" target="_blank">"Letter to Tom from Five Years Ago.mp3"</a></p>
+<p class="title"><a href="Improv 2023.01.15 e.mp3" target="_blank">"Blues in E January 15, 2023.mp3"</a></p>
+<p class="title"><a href="Improv 2023.01.10.mp3" target="_blank">"Improv January 10, 2023.mp3"</a></p>
+<p class="title"><a href="improv 2023.01.08.mp3" target="_blank">"Improv January 8, 2023.mp3"</a></p>
+<p class="title"><a href="improv 2023.01.06 e.mp3" target="_blank">"Blues in E January 6, 2023.mp3"</a></p>
+<p class="title" title="January 5, 2023"><a href="Improv 2023.01.05 thinking on.mp3" target="_blank">"Thinking on 🤔.mp3"</a></p>
+<p class="title" title="January 5, 2023"><a href="Improv 2023.01.05 2 thinking of.mp3" target="_blank">"Thinking of 😌.mp3"</a></p>
+<p class="title"><a href="improv 2022.12.29.mp3" target="_blank">"Improv December 29, 2022.mp3"</a></p>
+<p class="title" title="December 26, 2022"><a href="Improv 2022.12.29 take a bite!.mp3" target="_blank">Take a bite!.mp3"</a></p>
+<p class="title" title="December 29, 2022"><a href="Improv 2022.12.29 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #11.mp3"</a></p>
+<p class="title" title="December 26, 2022"><a href="improv 2022.12.26 lovely.mp3" target="_blank">"Variation on a Lovely Theme #4.mp3"</a></p>
+<p class="title" title="December 20, 2022"><a href="Improv 2022.12.20 cowboy astronomy.mp3" target="_blank">"Cowboy Astronomy.mp3"</a></p>
+<p class="title"><a href="improv 2022.12.17 mars.mp3" target="_blank">"Life on 🔴 December 16, 2022.mp3"</a> (Bowie)</p>
+<p class="title"><a href="Improv 2022.12.16.mp3" target="_blank">"Improv December 16, 2022.mp3"</a></p>
+<p class="title" title="December 16, 2022"><a href="Improv 2022.12.16 hubble.mp3" target="_blank">"Hubble Control Center Blues.mp3"</a></p>
+<p class="title" title="December 15, 2022"><a href="2022.012.15 lazarus.mp3" target="_blank">"Ain't that just like me.mp3"</a>(<a href="https://youtu.be/y-JqH1M4Ya8?si=Y568Xp_b1gyRhRb8&t=105" target="_blank">🐦</a>)</p>
+<p class="title" title="December 7, 2022"><a href="improv 2022.12.07 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #10.mp3"</a></p>
+<p class="title"><a href="Improv 2022.12.01 e.mp3" target="_blank">"Improv December 1, 2022.mp3"</a></p>
+<p class="title" title="October 10, 2022"><a href="improv 2022.10.10 mt royal.mp3" target="_blank">"Song for Mt. Royal.mp3"</a></p>
+<p class="title" title="October 9, 2022"><a href="improv 2022.10.09 st catherine.mp3" target="_blank">"Song for Rue St. Catherine.mp3"</a></p>
+<p class="title"><a href="improv 2022.10.07 grace.mp3" target="_blank">"Grace October 7, 2022.mp3"</a></p>
+<p class="title" title="October 6, 2022"><a href="improv 2022.10.06 jt.mp3
+<p class="title"><a href="improv 2022.10.01.mp3" target="_blank">"Improv October 1, 2022.mp3"</a></p>
+<p class="title"><a href="improv 2022.09.30.mp3" target="_blank">"Improv September 30, 2022.mp3"</a></p>
+<p class="title"><a href="improv 2022.09.24.mp3" target="_blank">"Improv September 24, 2022.mp3"</a></p>
+<p class="title"><a href="improv 2022.09.20 grace.mp3" target="_blank">"Grace September 20, 2022.mp3"</a></p>
+<p class="title"><a href="improv 2022.09.15.mp3" target="_blank">"Improv September 15, 2022.mp3"</a></p>
+<p class="title"><a href="improv 2022.09.12.mp3" target="_blank">"Improv September 12, 2022.mp3"</a></p>
+<p class="title"><a href="improv 2022.09.11.mp3" target="_blank">"Improv September 11, 2022.mp3"</a></p>
+<p class="title"><a href="improv 2022.09.07.mp3" target="_blank">"Improv September 7, 2022.mp3"</a></p>
+<p class="title"><a href="improv 2022.09.04 e.mp3" target="_blank">"Blues in E September 4, 2022.mp3"</a></p>
+<p class="title" title="August 21, 2022"><a href="improv 2022.08.21 thinking of you.mp3" target="_blank">"Gosh, do I miss you!.mp3"</a></p>
+<p class="title" title="August 21, 2022"><a href="improv 2022.08.21 pelo.mp3" target="_blank">"Pelo.mp3"</a></p>
+<p class="title"><a href="improv 2022.08.20.mp3" target="_blank">"Improv August 20, 2022.mp3"</a></p>
+<p class="title"><a href="improv 2022.08.19.mp3" target="_blank">"Improv August 19, 2022.mp3"</a></p>
+<p class="title"><a href="improv 2022.08.14.mp3" target="_blank">"Improv August 14, 2022.mp3"</a></p>
+<p class="title" title="August 9, 2022"><a href="improv 2022.08.09 sparky.mp3" target="_blank">"Sparky.mp3"</a></p>
+<p class="title"><a href="improv 2022.08.07 noise.mp3" target="_blank">"Noise August 7, 2022.mp3"</a></p>
+<p class="title"><a href="improv 2022.07.29.mp3" target="_blank">"Improv July 29, 2022.mp3"</a></p>
+<p class="title"><a href="improv 2022.07.29 2.mp3" target="_blank">"Improv July 29, 2022 #2.mp3"</a></p>
 <p class="title"><a href="improv 2022.07.16.mp3" target="_blank">"Improv July 16, 2022.mp3"</a></p>
 <p class="title"><a href="improv 2022.07.16 2.mp3" target="_blank">"Improv July 16, 2022 #2.mp3"</a></p>
 <p class="title"><a href="improv 2022.07.10.mp3" target="_blank">"Improv July 10, 2022.mp3"</a></p>
 <p class="title"><a href="improv 2022.07.10 2.mp3" target="_blank">"Improv July 10, 2022 #2.mp3"</a></p>
 <p class="title"><a href="improv 2022.07.01.mp3" target="_blank">"Improv July 1, 2022.mp3"</a></p>
 
-
-
-<p class="title" title="October 29, 2021">
-	<a href="Improv 2021.10.29 water studies.mp3" target="_blank">
-		"Water Studies.mp3"
-</a>
-</p>
-
-
-<p class="title" title="July 2, 2022"><a href="improv 2022.07.02 for the birds.mp3" target="_blank">"For the Birds!.mp3"</a></p>
-<p class="title" title="December 15, 2022"><a href="2022.012.15 lazarus.mp3" target="_blank">"Ain't that just like me.mp3"</a></p>
-	
-	<p class="title" title="December 15, 2022">
-<a href="2022.012.15 lazarus.mp3" target="_blank">
-"Ain't that just like me.mp3"
-</a>
-(
-<a href="https://youtu.be/y-JqH1M4Ya8?si=Y568Xp_b1gyRhRb8&t=105" target="_blank">
-🐦
-</a>
-)
-</p>
-
-	
-	
-<p class="header">–––– 2022 ––––</p>
 	
 <p class="title" title="June 29, 2022"><a href="improv 20220.06.30 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #9.mp3"</a></p>
 <p class="title" title="June 29, 2022"><a href="improv 2022.06.30 mj.mp3" target="_blank">"Variation on a Theme by MJ.mp3"</a></p>
