top of page edits
cut the subscribe thing and added songs by tom

--- a/songs/index.html
+++ b/songs/index.html
@@ -123,17 +123,12 @@ img {
 	<br>
 	<br>
 
-<p class="body">Submit your email address to join the mailing list:</p>
-	<form action="https://formspree.io/fortomadams@gmail.com" method="POST">
-		<input type="email" name="_replyto">
-  		<input type="submit" value="Send">
-	</form>
-
 	<br>
 	<br>
 	<br>
 	<br>
 
+	<p class="header">–––– Songs by Tom ––––</p>
 
 <p class="title" title="December 1, 2024"><a href="improv 2024.12.01 reunidos 2.mp3" target="_blank">"Reunidos.mp3"</a></p>
 <p class="title" title="August 15, 2024"><a href="Improv 2024.08.15 renfe.mp3" target="_blank">Renfe.mp3"</a></p>
