--- a/songs/index.html
+++ b/songs/index.html
@@ -130,12 +130,12 @@ img {
 
 	<p class="header">–––– Songs by Tom ––––</p>
 
-<p class="title" title="December 1, 2024"><a href="improv 2024.12.01 reunidos 2.mp3" target="_blank">"Reunidos.mp3"</a></p>
+<p class="title"><a href="Improv 2024.12.02 e.mp3" target="_blank">"Improv December 2 2024.mp3"</a></p>
+<p class="title" title="November 30, 2024"><a href="Improv 2024.11.30 frisell.mp3" target="_blank">Variation on a Theme by Frisell #13.mp3"</a></p>
+<p class="title" title="November 30, 2024"><a href="Improv 2024.11.30 Back in the saddle.mp3" target="_blank">Back in the saddle.mp3"</a></p>
 <p class="title" title="August 15, 2024"><a href="Improv 2024.08.15 renfe.mp3" target="_blank">Renfe.mp3"</a></p>
-<p class="title"><a href="Improv 2024.08.15 noise.mp3" target="_blank">"Noise August 15, 2024.mp3"</a></p>
 <p class="title"><a href="Improv 2024.08.13.mp3" target="_blank">"Improv August 13, 2024.mp3"</a></p>
 <p class="title"><a href="Improv 2024.07.09.mp3" target="_blank">"Improv July 9, 2024.mp3"</a></p>
-<p class="title"><a href="Improv 2024.07.06 texture.mp3" target="_blank">"Texture July 6, 2024.mp3"</a></p>
 <p class="title"><a href="Improv 2024.07.06 e.mp3" target="_blank">"Blues in E July 6, 2024.mp3"</a></p>
 <p class="title"><a href="Improv 2024.07.04.mp3" target="_blank">"Improv July 4, 2024.mp3"</a></p>
 <p class="title" title="July 2, 2024"><a href="improv 2022.07.02 for the birds.mp3" target="_blank">"For the Birds!.mp3"</a></p>
@@ -145,11 +145,11 @@ img {
 <p class="title" title="June 28, 2024"><a href="Improv 2024.06.28 how to win.mp3" target="_blank">"How to Win.mp3"</a></p>
 <p class="title"><a href="Improv 2024.03.09.mp3" target="_blank">"Improv March 9, 2024.mp3"</a></p>
 <p class="title" title="February 24, 2024"><a href="Improv 2024.02.24 lovely.mp3" target="_blank">"Variation on a Lovely Theme #7.mp3"</a></p>
-<p class="title"><a href="Improv 2023.12.16.mp3" target="_blank">"Improv December 16, 2023.mp3"</a></p>
-<p class="title"><a href="Improv 2023.12.15 e.mp3" target="_blank">"Improv December 15, 2023.mp3"</a></p>
+<p class="title"><a href="Improv 2023.12.16.mp3" target="_blank">"Marhaban 👋.mp3"</a></p>
+<p class="title"><a href="Improv 2023.12.15 e.mp3" target="_blank">"Song for Parque Federico García Lorca.mp3"</a></p>
 <p class="title"><a href="Improv 2023.11.24.mp3" target="_blank">"Improv November 24, 2023.mp3"</a></p>
 <p class="title"><a href="Improv 2023.11.24 2.mp3" target="_blank">"Improv November 24, 2023 #2.mp3"</a></p>
-<p class="title"><a href="life on mars 2023.11.18.mp3" target="_blank">"Life on 💃 November 18, 2023"</a></p>
+<p class="title"><a href="life on mars 2023.11.18.mp3" target="_blank">"¿Life on Mars? 💃.mp3"</a></p>
 <p class="title" title="August 30, 2023"><a href="Improv 2023.08.30 lovely.mp3" target="_blank">"Variation on a Lovely Theme #6.mp3"</a></p>
 <p class="title" title="August 30, 2023"><a href="Improv 2023.08.30 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #12.mp3"</a></p>
 <p class="title"><a href="Improv 2023.08.07.mp3" target="_blank">"Improv August 7, 2023.mp3"</a></p>
@@ -176,8 +176,7 @@ img {
 <p class="title" title="April 12, 2023"><a href="improv 2023.04.12 maybe just maybe.mp3" target="_blank">"Maybe Just Maybe.mp3"</a></p>
 <p class="title" title="March 15, 2023"><a href="Improv 2023.03.15 rehearsal.mp3" target="_blank">"Dress Rehearsal.mp3"</a></p>
 <p class="title" title="March 10, 2023"><a href="Improv 2023.03.10 first impressions.mp3" target="_blank">"First Impressions.mp3"</a></p>
-<p class="title" title="March 10, 2023"><a href="Improv 2023.03.10 second chances.mp3
-" target="_blank">"Second Chances.mp3"</a></p>
+<p class="title" title="March 10, 2023"><a href="Improv 2023.03.10 second chances.mp3" target="_blank">"Second Chances.mp3"</a></p>
 <p class="title"><a href="Improv 2023.03.01.mp3" target="_blank">"Improv March 1 2023.mp3"</a></p>
 <p class="title" title="February 24, 2023"><a href="Improv 2023.02.24 sketch of Chamberí .mp3" target="_blank">"Sketch of Chamberí.mp3"</a></p>
 <p class="title"><a href="Improv 2023.02.24 .mp3" target="_blank">"Improv February 24, 2023.mp3"</a></p>
@@ -198,14 +197,14 @@ img {
 <p class="title" title="December 29, 2022"><a href="Improv 2022.12.29 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #11.mp3"</a></p>
 <p class="title" title="December 26, 2022"><a href="improv 2022.12.26 lovely.mp3" target="_blank">"Variation on a Lovely Theme #4.mp3"</a></p>
 <p class="title" title="December 20, 2022"><a href="Improv 2022.12.20 cowboy astronomy.mp3" target="_blank">"Cowboy Astronomy.mp3"</a></p>
-<p class="title"><a href="improv 2022.12.17 mars.mp3" target="_blank">"Life on 🔴 December 16, 2022.mp3"</a> (Bowie)</p>
+<p class="title"><a href="improv 2022.12.17 mars.mp3" target="_blank">"Life on Mars? 🔴.mp3"</a> (Bowie)</p>
 <p class="title"><a href="Improv 2022.12.16.mp3" target="_blank">"Improv December 16, 2022.mp3"</a></p>
 <p class="title" title="December 16, 2022"><a href="Improv 2022.12.16 hubble.mp3" target="_blank">"Hubble Control Center Blues.mp3"</a></p>
 <p class="title" title="December 15, 2022"><a href="2022.012.15 lazarus.mp3" target="_blank">"Ain't that just like me.mp3"</a>(<a href="https://youtu.be/y-JqH1M4Ya8?si=Y568Xp_b1gyRhRb8&t=105" target="_blank">🐦</a>)</p>
 <p class="title" title="December 7, 2022"><a href="improv 2022.12.07 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #10.mp3"</a></p>
 <p class="title"><a href="Improv 2022.12.01 e.mp3" target="_blank">"Improv December 1, 2022.mp3"</a></p>
 <p class="title" title="October 10, 2022"><a href="improv 2022.10.10 mt royal.mp3" target="_blank">"Song for Mt. Royal.mp3"</a></p>
-<p class="title" title="October 9, 2022"><a href="improv 2022.10.09 st catherine.mp3" target="_blank">"Song for Rue St. Catherine.mp3"</a></p>
+<p class="title" title="October 9, 2022"><a href="improv 2022.10.09 st catherine.mp3" target="_blank">"Song for Rue Sainte-Catherine.mp3"</a></p>
 <p class="title"><a href="improv 2022.10.07 grace.mp3" target="_blank">"Grace October 7, 2022.mp3"</a></p>
 <p class="title" title="October 6, 2022"><a href="improv 2022.10.06 jt.mp3
 <p class="title"><a href="improv 2022.10.01.mp3" target="_blank">"Improv October 1, 2022.mp3"</a></p>
