--- a/songs/index.html
+++ b/songs/index.html
@@ -65,15 +65,15 @@ img {
 	margin: 5px;
 }		
 .header {
-	font-size: 16pt;
+	font-size: 18pt;
 	font-family: garamond;
-	color:gray;
+	color:black;
 	text-align: center;
 	font-weight: normal;
 	font-style: italic;
 }
 .title {
-	font-size: 12pt;
+	font-size: 14pt;
 	font-family:Trebuchet MS;
 	color: #362000;
 	text-align: center;
@@ -120,10 +120,6 @@ img {
 <p class="masthead"><a href="https://www.tomspage.org">pictures</a>   •   <a href="https://www.tomspage.org/videos">videos</a>   •   <a href="https://www.tomspage.org/songs">songs</a>   •   <a href="https://www.tomspage.org/anagrams">text</a></p>
 <p class="masthead">by Tom</p>
 	
-	<br>
-	<br>
-
-	<br>
 	<br>
 	<br>
 	<br>
