--- a/songs/index.html
+++ b/songs/index.html
@@ -126,7 +126,7 @@ img {
 
 	<p class="header">–––– Songs by Tom ––––</p>
 
-<p class="title"><a href="Improv 2024.12.02 e.mp3" target="_blank">"Improv December 2 2024.mp3"</a></p>
+<p class="title"><a href="Improv 2024.12.02 e.mp3" target="_blank">"Blues in E December 2 2024.mp3"</a></p>
 <p class="title" title="November 30, 2024"><a href="Improv 2024.11.30 frisell.mp3" target="_blank">Variation on a Theme by Frisell #13.mp3"</a></p>
 <p class="title" title="November 30, 2024"><a href="Improv 2024.11.30 Back in the saddle.mp3" target="_blank">Back in the saddle.mp3"</a></p>
 <p class="title" title="August 15, 2024"><a href="Improv 2024.08.15 renfe.mp3" target="_blank">Renfe.mp3"</a></p>
