improv 2024.12.11 and top of page edit

--- a/songs/index.html
+++ b/songs/index.html
@@ -122,11 +122,14 @@ img {
 	
 	<br>
 	<br>
-	<br>
 
 	<p class="header">–––– Songs by Tom ––––</p>
 
-<p class="title"><a href="Improv 2024.12.02 e.mp3" target="_blank">Blues in E December 2 2024</a></p>
+	<br>
+
+<p class="title"><a href="Improv 2024.12.11.mp3" target="_blank">Improv December 11, 2024</a></p>
+<p class="title"><a href="Improv 2024.12.11 2.mp3" target="_blank">Improv December 11, 2024 #2</a></p>
+<p class="title"><a href="Improv 2024.12.02 e.mp3" target="_blank">Blues in E December 2, 2024</a></p>
 <p class="title" title="November 30, 2024"><a href="Improv 2024.11.30 frisell.mp3" target="_blank">Variation on a Theme by Frisell #13</a></p>
 <p class="title" title="November 30, 2024"><a href="Improv 2024.11.30 Back in the saddle.mp3" target="_blank">Back in the saddle</a></p>
 <p class="title" title="August 15, 2024"><a href="Improv 2024.08.15 renfe.mp3" target="_blank">Renfe</a></p>
@@ -202,7 +205,7 @@ img {
 <p class="title" title="October 10, 2022"><a href="improv 2022.10.10 mt royal.mp3" target="_blank">Song for Mt. Royal</a></p>
 <p class="title" title="October 9, 2022"><a href="improv 2022.10.09 st catherine.mp3" target="_blank">Song for Rue Sainte-Catherine</a></p>
 <p class="title"><a href="improv 2022.10.07 grace.mp3" target="_blank">Grace October 7, 2022</a></p>
-<p class="title" title="October 6, 2022"><a href="improv 2022.10.06 jt.mp3
+<p class="title" title="October 6, 2022"><a href="improv 2022.10.06 jt.mp3">Variation on a Theme by JT #4</a></p>
 <p class="title"><a href="improv 2022.10.01.mp3" target="_blank">Improv October 1, 2022</a></p>
 <p class="title"><a href="improv 2022.09.30.mp3" target="_blank">Improv September 30, 2022</a></p>
 <p class="title"><a href="improv 2022.09.24.mp3" target="_blank">Improv September 24, 2022</a></p>
