--- a/songs/index.html
+++ b/songs/index.html
@@ -115,7 +115,7 @@ img {
 	<br>
 	<br>
 	
-<img src="images/songs page 5.png" class="logo">
+<img src="images/tomspage.png" class="logo">
 	
 <p class="masthead"><a href="https://www.tomspage.org">pictures</a>   •   <a href="https://www.tomspage.org/videos">videos</a>   •   <a href="https://www.tomspage.org/songs">songs</a>   •   <a href="https://www.tomspage.org/anagrams">text</a></p>
 <p class="masthead">by Tom</p>
