--- a/songs/index.html
+++ b/songs/index.html
@@ -127,7 +127,12 @@ img {
 
 	<br> 
 
+<p class="title"><a href="Improv 2024.12.18.mp3" target="_blank">Improv December 18, 2024</a></p>
+<p class="title" title="December 18, 2024"><a href="Improv 2024.12.18 lovely.mp3"><a href="Improv 2024.08.15 renfe.mp3" target="_blank">Variation on a Lovely Theme #8</a></p>
+<p class="title"><a href="Improv 2024.12.15.mp3" target="_blank">Improv December 15, 2024</a></p>
+<p class="title" title="December 15, 2024"><a href="Improv 2024.12.15 toro.mp3"><a href="Improv 2024.08.15 renfe.mp3" target="_blank">Toro de Carretera</a></p>	
 <p class="title"><a href="Improv 2024.12.11.mp3" target="_blank">Improv December 11, 2024</a></p>
+<p class="title"><a href="Improv 2023.12.11 2.mp3" target="_blank">Improv December 11, 2024 #2</a></p>
 <p class="title"><a href="Improv 2024.12.02 e.mp3" target="_blank">Blues in E December 2, 2024</a></p>
 <p class="title" title="November 30, 2024"><a href="Improv 2024.11.30 frisell.mp3" target="_blank">Variation on a Theme by Frisell #13</a></p>
 <p class="title" title="November 30, 2024"><a href="Improv 2024.11.30 Back in the saddle.mp3" target="_blank">Back in the saddle</a></p>
